[package]
name = "nrf52840-host"
version = "0.0.1"
authors = ["Erik Svensson <erik.public@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32"
byteorder = { version = "1", default-features = false }
slice-deque = "0.1.16"
ieee802154 = { git = "https://github.com/braun-embedded/rust-ieee802.15.4.git", branch = "master" }
esercom = { git = "https://blueluna@bitbucket.org/blueluna/esercom.git", branch = "master" }
psila-data = { path = "../psila-data" }
psila-crypto-gcrypt = { path = "../psila-crypto-gcrypt" }
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
gcrypt = "0.6"
chrono = "0.4"

[dependencies.serialport]
version = "3.2"
default-features = false
features = []
