[package]
name = "psila-crypto-gcrypt"
version = "0.0.1"
description = "Crate for crypto handling in Psila using gcrypt"
authors = ["Erik Svensson <erik.public@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1", default-features = false }
gcrypt = { version = "0.6" }
psila-crypto = { path = "../psila-crypto" }
