[package]
name = "psila-data"
description = "Library for reading/writing Zigbee packages."
version = "0.0.1"
authors = ["Erik Svensson <erik.public@gmail.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/blueluna/psilas"
categories = ["network-programming"]
keywords = ["zigbee", "iot", "wpan", "network"]

[features]
default = []
core = ["heapless"]

[dependencies]
log = "0.4.8"
byteorder = { version = "1", default-features = false }
bitflags = "1.0"
heapless = { version = "0.5", optional = true }
ieee802154 = { git = "https://github.com/braun-embedded/rust-ieee802.15.4.git", branch = "master" }
psila-crypto = { path = "../psila-crypto" }