[package]
name = "psila-data"
description = "Library for reading/writing Zigbee packages."
version = "0.0.1"
authors = ["Erik Svensson <erik.public@gmail.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/blueluna/psilas"
categories = ["network-programming"]
keywords = ["zigbee", "iot", "wpan", "network"]

[features]
default = []
core = ["heapless"]

[dependencies]
log = "0.4.8"
byteorder = { version = "1", default-features = false }
bitflags = "1.0"
hash32 = "0.1"
hash32-derive = "0.1"
heapless = { version = "0.5", optional = true }
ieee802154 = "0.3"
psila-crypto = { path = "../psila-crypto" }