[package]
name = "psila-host"
version = "0.0.1"
authors = ["Erik Svensson <erik.public@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32"
byteorder = { version = "1", default-features = false }
slice-deque = "0.3"
ieee802154 = "0.3"
esercom = { git = "https://github.com/blueluna/esercom.git", branch = "master" }
psila-data = { path = "../psila-data" }
psila-crypto-rust-crypto = { path = "../psila-crypto-rust-crypto" }
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
chrono = "0.4"

[dependencies.serialport]
version = "3.2"
default-features = false
features = []
