[package]
name = "psila-service"
version = "0.0.1"
authors = ["Erik Svensson <erik.public@gmail.com>"]
edition = "2018"

[dependencies]
bbqueue = "0.5"
byte = { git = "https://github.com/andylokandy/byte.git" }
ieee802154 = { git = "https://github.com/blueluna/ieee-802.15.4.git" }
psila-crypto = { path = "../psila-crypto" }
psila-data = { path = "../psila-data" }
heapless = "0.7"
defmt = { version = "0.3", optional = true }

[features]
default = []
core = ["psila-data/core"]
defmt = ["ieee802154/defmt", "dep:defmt"]
